--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,9 @@
         <div class="grid-container">
             <header class="header">
                 <div class="home">
+                    <button onclick="openMenu()">
+                        &#9776;
+                    </button>
                     <a href="index.html">Not Amazon</a>
                 </div>
                 <div class="header-links">
@@ -16,8 +19,13 @@
                     <a href="cart.html">Shopping Cart</a>
                 </div>
             </header>
-            <aside>
-                Categories
+            <aside class="sidebar">
+                <h3>Product Categories</h3>
+                <button onclick="closeMenu()">x</button>
+                <ul>
+                    <li><a href="index.html">Shirts</a></li>
+                    <li><a href="index.html">Pants</a></li>
+                </ul>
             </aside>
             <main class="main">
                 <div class="content">
@@ -74,7 +82,14 @@
                 All rights reserved.
             </footer>
         </div>
-
+        <script>
+            function openMenu(){
+                document.querySelector(".sidebar").classList.add("open")
+            }
+            function closeMenu(){
+                document.querySelector(".sidebar").classList.remove("open")
+            }
+        </script>
     </body>
 
 </html>
