--- a/template/style.css
+++ b/template/style.css
@@ -100,3 +100,36 @@ a:hover{
 .product-rating{
     margin-bottom: 1rem;
 }
+/*sidebar*/
+.home button{
+    font-size: 3rem;
+    padding: 0.5rem;
+    background: none;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+}
+.sidebar{
+    position:fixed;
+    transform: translateX(-30rem);
+    width: 30rem;
+    background-color: lightgrey;
+    height: 100%;
+}
+.sidebar.open{
+    transform: translateX(0);
+}
+.sidebar button{
+    border-radius: 50%;
+    border: 0.1rem #000000 solid;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.5rem;
+    background-color:red;
+    font-size: 2rem;
+    padding-top: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top:1.5rem;
+}
