--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -191,3 +191,10 @@ a:hover{
 .add-to-cart-button:hover{
   border: 0.1rem #404040 solid;
 }
+.Out-of-stock{
+  padding: 1rem;
+  border: .1rem #808080 solid;
+  border-radius: 0.5rem;
+  background-color: rgb(255, 0, 0);
+  text-align: center;
+}
