--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -198,3 +198,63 @@ a:hover{
   background-color: rgb(255, 0, 0);
   text-align: center;
 }
+/*Cart Screen*/
+.cart{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+.cart-list{
+  flex: 3 1 60rem;
+}
+.cart-items {
+  padding:1rem;
+  list-style-type: none;
+  display: flex;
+  
+}
+.cart-list li{
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  border: 0.1rem coral solid;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+}
+.cart-items img{
+  flex: 1 1;
+  max-height: 10rem;
+  max-width: 10rem;
+  border: 0.1rem  #c0c0c0 solid;
+}
+.cart-list li:first-child{
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.cart-action{
+  flex: 1 1 20rem;
+  background-color: aquamarine;
+  padding: 1rem;
+  border: .1rem #808080 solid;
+  border-radius: 0.5rem;
+  align-items:flex-end;
+}
+.cart-item-price{
+  flex: 1 1;
+  font-size: 2.5rem;
+  text-align: right;
+}
+.cart-item-name{
+  flex: 8 1;
+  margin-left: 1rem;
+}
+.checkout-button{
+  padding: 1rem;
+  border: .1rem #808080 solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background-color: orange;
+}
