--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@ html{
 }
 body{
   font: 1.6rem Helvetica;
+  background-color: #f7f6f2;
   height: 100vh;
   margin: 0;
 
@@ -78,13 +79,15 @@ a:hover{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  
 }
 .products li{
+  background-color: white;
   list-style-type: none;
   flex: 0 1 34rem;
   margin: 1rem;
   height: 50rem;
-  border-bottom: .1rem #c0c0c0 solid;
+  border: .1rem #c0c0c0 solid;
   padding: 0;
 }
 .product{
@@ -94,23 +97,27 @@ a:hover{
   height: 100%;
 }
 .product-image{
-  max-width: 34rem;
-  max-height: 34rem;
+  width: 34rem;
+  height: 34rem;
   border: 0.1rem  #c0c0c0 solid;
 }
 .product-name{
+  margin-left: 1rem;
   font-size: 2rem;
   font-weight: bold;
 }
 .product-brand{
+  margin-left: 1rem;
   font-size: 1.2rem;
   color: grey;
 }
 .product-price{
+  margin-left: 1rem;
   font-size: 2rem;
   font-weight: bold;
 }
 .product-rating{
+  margin-left: 1rem;
   margin-bottom: 1rem;
 }
 /*sidebar*/
@@ -154,6 +161,7 @@ a:hover{
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 1rem;
+  
 }
 .details img{
   flex: 2 1 60rem;
@@ -165,6 +173,7 @@ a:hover{
   flex: 2 1 60rem;
   width: auto;
   border: 0.1rem  #c0c0c0 solid;
+  background-color: white;
 }
 .details-actions{
   flex: 2 1 60rem;
